<resources>
    <string name="app_name">The Getaway</string>
    <string name="place_name_enter">Place Name</string>
    <string name="place_address_input">Place Address</string>
    <string name="start_time_input">Start Time</string>
    <string name="end_time_input">End Time</string>
    <string name="checklist_inout">CheckList</string>
    <string name="save">Save</string>
    <string name="image_of_place">Image of place</string>
    <string name="no_query">no query</string>
    <string name="required">Required</string>
    <string name="failed">Failed</string>
    <string name="Good">good</string>
    <string name="delete">Delete</string>
    <string name="Discard_changes">Discard Changes</string>
    <string name="stay">Stay</string>
</resources>
