<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:background="@drawable/hood">

    <EditText
        android:id="@+id/place_name_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_name_enter"
        style="@style/edit_field"/>

    <EditText
        android:id="@+id/place_location_input"
        android:inputType="textPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_address_input"
        style="@style/edit_field"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:inputType="time"
            android:id="@+id/start_time_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_time_input"
            style="@style/edit_field"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/end_time_input"
            android:inputType="time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_time_input"
            style="@style/edit_field"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageButton
        android:id="@+id/place_image_input"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>

    <EditText
        android:id="@+id/checklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_field"
        android:hint="@string/checklist_inout"
        />

</LinearLayout>